[package]
name = "nl_opt"
version = "0.3.6"
edition = "2024"
license = "MIT OR Apache-2.0"

categories = [
    "data-structures",
    "compilers",
    "science",
]

description = "Verilog compiler driver for running safety-net passes"
documentation = "https://matth2k.github.io/safety-pass/"
homepage = "https://matth2k.github.io/safety-pass/"

include = [
    "Cargo.toml",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
    "src/*.rs",
]

keywords = [
    "data-structures",
    "eda",
    "netlist",
    "circuits",
    "hardware",
]

readme = "README.md"
repository = "https://github.com/matth2k/safety-pass"

[dependencies]
safety-pass = { path = "../safety-pass", version = "0.4.8", features = ["id"] }
safety-net = { version = "0.10.1" }
simplelog = {version = "0.12.2" }
nl-compiler = { version = "0.2.0" }
sv-parser = { version = "0.13.4" }
clap = {version = "4.6.1", features = ["derive"] }
log = { version = "0.4.29" }
